<resources>
    <string name="app_name">Pickem</string>
    <string name="already_have_an_account_sign_in"> <u> Already have an account? Sign in </u></string>
    <string name="not_registered_yet_sing_in"><u>Not Registered yet? Sign up.</u></string>
    <string name="enter_an_username">Choose a Username</string>
    <string name="enter_an_email">Enter an Email</string>
    <string name="enter_a_password">Enter a Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="password">Password</string>
    <string name="email">email</string>
    <string name="reset">Reset</string>
    <string name="new_password">New Password</string>
    <string name="repeat_new_password">Repeat new password</string>
    <string name="pmbe">Passwords must be equal</string>
    <string name="reminder_if_nothing_has_been_chosen_on_match_day_1h_before_match_start">Reminder if nothing has been chosen on match day 1h before match start</string>
    <string name="elotracker_info"> Insert your Region and Summoner Name and check this switch if you want the EloTracker system to automatically gather your progress every day at midnight and load them into the Elotracker graph, left the switch unckecked if you want to manually update your progress. Attention: will work only if the notification engine is up
</string>
    <string name="notification_info">To enable the app to provide the best possible experience the system needs to show a persistent notification to let you know that the app has a task costantly working. This engine will perform a task that will take about 1s to complete every hour, you must follow a team in home page to receive its notifications </string>
    <string name="terms_and_conditions">Terms And Conditions
By downloading or using the app, these terms will automatically apply to you – you should make sure therefore that you read them carefully before using the app. You’re not allowed to copy, or modify the app, any part of the app. You’re not allowed to attempt to extract the source code of the app, and you also shouldn’t try to translate the app into other languages, or make derivative versions. The app itself, and all the trade marks, copyright, database rights and other intellectual property rights related to it, still belong to the DreamSphere studio’s team.
DreamSphere studio is committed to ensuring that the app is as useful and efficient as possible. For that reason, we reserve the right to make changes to the app or to charge for its services, at any time and for any reason. We will never charge you for the app or its services without making it very clear to you exactly what you’re paying for.
The Pickem app stores and processes personal data that you have provided to us, in order to provide the best possible service. It’s your responsibility to keep your phone and access to the app secure. We therefore recommend that you do not jailbreak or root your phone, which is the process of removing software restrictions and limitations imposed by the official operating system of your device. It could make your phone vulnerable to malware/viruses/malicious programs, compromise your phone’s security features and it could mean that the Pickem app won’t work properly or at all.
The app does use third party services that declare their own Terms and Conditions.
Link to Terms and Conditions of third party service providers used by the app
•	<a href="https://policies.google.com/terms">Google Play Services</a>
•	<a href="https://firebase.google.com/terms/analytics">Google Analytics for Firebase</a>
•	<a href="https://firebase.google.com/terms/crashlytics">Firebase Crashlytics </a>
You should be aware that there are certain things that the DreamSphere studio’s team will not take responsibility for. Certain functions of the app will require the app to have an active internet connection. The connection can be Wi-Fi, or provided by your mobile network provider, but DreamSphere studio’s team cannot take responsibility for the app not working at full functionality if you don’t have access to Wi-Fi, and you don’t have any of your data allowance left.
If you’re using the app outside of an area with Wi-Fi, you should remember that your terms of the agreement with your mobile network provider will still apply. As a result, you may be charged by your mobile provider for the cost of data for the duration of the connection while accessing the app, or other third party charges. In using the app, you’re accepting responsibility for any such charges, including roaming data charges if you use the app outside of your home territory (i.e. region or country) without turning off data roaming. If you are not the bill payer for the device on which you’re using the app, please be aware that we assume that you have received permission from the bill payer for using the app.
Along the same lines, DreamSphere studio’s team cannot always take responsibility for the way you use the app i.e. You need to make sure that your device stays charged – if it runs out of battery and you can’t turn it on to avail the Service, DreamSphere studio’s team cannot accept responsibility.
With respect to the DreamSphere studio’s team responsibility for your use of the app, when you’re using the app, it’s important to bear in mind that although we endeavour to ensure that it is updated and correct at all times, we do rely on third parties to provide information to us so that we can make it available to you. the DreamSphere studio’s team
accepts no liability for any loss, direct or indirect, you experience as a result of relying wholly on this functionality of the app.
At some point, we may wish to update the app. The app is currently available on Android – the requirements for system (and for any additional systems we decide to extend the availability of the app to) may change, and you’ll need to download the updates if you want to keep using the app. the DreamSphere studio’s team does not promise that it will always update the app so that it is relevant to you and/or works with the Android version that you have installed on your device. However, you promise to always accept updates to the application when offered to you, We may also wish to stop providing the app, and may terminate use of it at any time without giving notice of termination to you. Unless we tell you otherwise, upon any termination, (a) the rights and licenses granted to you in these terms will end; (b) you must stop using the app, and (if needed) delete it from your device.
Changes to This Terms and Conditions
I may update our Terms and Conditions from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Terms and Conditions on this page.
These terms and conditions are effective as of 2021-04-01
Contact Us
If you have any questions or suggestions about my Terms and Conditions, do not hesitate to contact me at dreamspherestudio@gmail.com.

</string>
    <string name="Challenger">Challenger</string>
    <string name="Grandmaster">Grandmaster</string>
    <string name="Master">Master</string>
    <string name="Diamond_1">Diamond I</string>
    <string name="Diamond_2">Diamond II</string>
    <string name="Diamond_3">Diamond III</string>
    <string name="Diamond_4">Diamond IV</string>
    <string name="Platinum_1">Platinum I</string>
    <string name="Platinum_2">Platinum II</string>
    <string name="Platinum_3">Platinum III</string>
    <string name="Platinum_4">Platinum IV</string>
    <string name="Gold_1">Gold I</string>
    <string name="Gold_2">Gold II</string>
    <string name="Gold_3">Gold III</string>
    <string name="Gold_4">Gold IV</string>
    <string name="Silver_1">Silver I</string>
    <string name="Silver_2">Silver II</string>
    <string name="Silver_3">Silver III</string>
    <string name="Silver_4">Silver IV</string>
    <string name="Bronze_1">Bronze I</string>
    <string name="Bronze_2">Bronze II</string>
    <string name="Bronze_3">Bronze III</string>
    <string name="Bronze_4">Bronze IV</string>
    <string name="Iron_1">Iron I</string>
    <string name="Iron_2">Iron II</string>
    <string name="Iron_3">Iron III</string>
    <string name="Iron_4">Iron IV</string>
    <string name="summoner_server">summoner_server</string>
    <string name="summoner_name">summoner_name</string>
    <string name="summoner_elotracker">summoner_elotracker</string>
    <string name="HTTP">https://</string>
    <string name="riot_api_address">.api.riotgames.com</string>
    <string name="key_request">"?api_key="</string>
    <string name="storageRegionReference">gs://pickemandroid.appspot.com/region_img/</string>
    <string name="firebase_users">Users</string>
    <string name="firebase_regions">Regions</string>
    <string name="firebase_analysts">Analysts</string>
    <string name="firebase_statistics">Statistics</string>
    <string name="firebase_servers">Servers</string>
    <string name="firebase_teams">Teams</string>
    <string name="firebase_users_analists">UserAnalysts</string>
    <string name="firebase_users_generealities">UserGeneralities</string>
    <string name="firebase_users_picks">UserPicks</string>
    <string name="firebase_users_elotracker">UserEloTracker</string>
    <string name="firebase_user_notification">UserNotifications</string>
    <string name="firebase_user_notification_region">Regions</string>
    <string name="firebase_user_notification_teams">Teams</string>
    <string name="firebase_user_choosen_regions">choosen_regions</string>
    <string name="firebase_matches_stats">matches_stats</string>
    <string name="firebase_players">players</string>
    <string name="firebase_Matches">Matches</string>
    <string name="region_ID">id</string>
    <string name="region_name_ext">slug</string>
    <string name="region_logo">image</string>
    <string name="region_name">name</string>
    <string name="regions_id">id</string>
    <string name="regions_image">image</string>
    <string name="regions_name">name</string>
    <string name="regions_priority">priority</string>
    <string name="regions_region">region</string>
    <string name="regions_slug">slug</string>
    <string name="team_id">id</string>
    <string name="team_code">code</string>
    <string name="team_image">image</string>
    <string name="team_name">name</string>
    <string name="team">team</string>
    <string name="notification_no_choice_made">no_choice_made</string>
    <string name="notification_first_match_otd">notification_first_match_otd</string>
    <string name="notification_morning_reminder">notification_morning_reminder</string>
    <string name="notification_team_as_team_plays">notification_team_as_team_plays</string>
    <string name="notification_team_morning_reminder">notification_team_morning_reminder</string>
    <string name="elotracker_id">elotracker_id</string>
    <string name="elotracker_date">elotracker_date</string>
    <string name="elotracker_lp_gains">elotracker_lp_gains</string>
    <string name="elotracker_losses">elotracker_losses</string>
    <string name="elotracker_elo">elotracker_elo</string>
    <string name="elotracker_lps">elotracker_lps</string>
    <string name="channel_pickem">Chennel Pickem</string>
    <string name="channel_description">Pickem Notification Channel</string>
    <string name="channel_name">pickem_channel</string>
    <string name="TYPE">TYPE</string>
    <string name="FIRST_MATCH">FIRST_MATCH</string>
    <string name="NOT_PICKED">NOT_PICKED</string>
    <string name="MATCHES">MATCHES</string>
    <string name="MATCH">MATCH</string>
    <string name="folder_regions_images">/images/regions/</string>
    <string name="folder_teams_images">/images/teams/</string>
    <string name="current_standing_for">Current standing for:</string>
</resources>