<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login_rengar_opaque" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/see_database"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/simplex"
        android:text="Pick'EM"
        android:textColor="@color/y2"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageView" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/square_round_corners"
        android:fontFamily="@font/simplex"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingVertical="10dp"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:textSize="@dimen/edittexts_textsize"
        app:layout_constraintBottom_toTopOf="@+id/login_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/square_round_corners"
        android:fontFamily="@font/simplex"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingVertical="10dp"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:textSize="@dimen/edittexts_textsize"
        app:layout_constraintBottom_toTopOf="@+id/button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginBottom="140dp"
        android:background="@drawable/buttons_background_white_stroke"
        android:enabled="true"
        android:fontFamily="@font/simplex"
        android:paddingHorizontal="10dp"
        android:text="Login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/go_to_registration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/go_to_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/not_registered_yet_sing_in"
        android:textColor="@color/light_gray"
        android:textSize="16sp"
        android:textStyle="italic"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/go_to_registration2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/go_to_registration2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="forgot password?"
        android:textColor="@color/light_gray"
        android:layout_marginBottom="10dp"

        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/login_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateDrawable="@drawable/custom_progressbar"
        android:layout_gravity="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/login_password"
        app:layout_constraintStart_toStartOf="@+id/login_password"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>