<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AccountActivities.RegisterActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/register_darius_opaque"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/register_scrollview">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/simplex"
                android:text="Pick'EM"
                android:textColor="@color/y2"
                android:textSize="50sp"
                android:layout_marginTop="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/square_round_corners"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2">



                <EditText
                    android:id="@+id/register_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/square_round_corners"
                    android:fontFamily="@font/simplex"
                    android:hint="@string/enter_an_email"
                    android:inputType="textEmailAddress"

                    android:paddingVertical="10dp"
                    android:selectAllOnFocus="true"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/edittexts_textsize"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/register_username"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:background="@drawable/square_round_corners"
                    android:fontFamily="@font/simplex"
                    android:hint="@string/enter_an_username"
                    android:inputType="text"
                    android:paddingVertical="10dp"
                    android:layout_marginTop="20dp"
                    android:selectAllOnFocus="true"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/edittexts_textsize"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/register_email" />

                <EditText
                    android:id="@+id/register_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/square_round_corners"
                    android:fontFamily="@font/simplex"
                    android:hint="@string/enter_a_password"
                    android:inputType="textPassword"

                    android:paddingVertical="10dp"
                    android:selectAllOnFocus="true"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/edittexts_textsize"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/register_username" />

                <EditText
                    android:id="@+id/register_repeat_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/square_round_corners"
                    android:fontFamily="@font/simplex"
                    android:hint="@string/repeat_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:paddingVertical="10dp"
                    android:selectAllOnFocus="true"

                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/edittexts_textsize"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/register_password" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/square_round_corners"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/register_repeat_password">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/cc_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/square_round_corners_trasp"

                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/textView_selectRegion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/simplex"
                            android:text="Select Regions:"
                            android:textSize="20sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageButton
                            android:id="@+id/registration_show_regions"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@drawable/square_round_corners"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_dropdown"
                            app:layout_constraintBottom_toBottomOf="@+id/textView_selectRegion"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/textView_selectRegion" />
                    </androidx.constraintlayout.widget.ConstraintLayout>


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/collapsable_box_registration"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cc_title">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/register_recyclerview_regioni"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"
                            android:dividerHeight="8dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/button_register"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/login_button"
                    android:enabled="true"
                    android:fontFamily="@font/classicroman"
                    android:paddingHorizontal="10dp"

                    android:text="Sign Up"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

                <TextView
                    android:id="@+id/go_to_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/already_have_an_account_sign_in"
                    android:textColor="@color/light_gray"
                    android:textStyle="italic"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/button_register" />

                <ProgressBar
                    android:id="@+id/register_progressbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:indeterminateDrawable="@drawable/custom_progressbar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>









</androidx.constraintlayout.widget.ConstraintLayout>